[tool.poetry]
name = "fault-bearing-signal-simulation"
version = "0.1.0"
description = "The program simulate fault bearing signal for CNN-based classification task."
authors = ["vuong-viet-hung <vuongviethung156@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
